# magro

./: AUTHORS  ChangeLog  Makefile.in  NEWS  README  config.h.in  configure  configure.in
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
macosx_installer.pmdoc/: 01boehmgc-contents.xml  01boehmgc.xml  02boehmgc-contents.xml  02boehmgc.xml  index.xml
rmagro/: DESCRIPTION
rmagro/R/: magro.samples.r
rmagro/man/: magro.samples.Rd
sample/: sample-data.R  sample.bug
src/: Makefile.am  Makefile.in
src/.deps/: array_node.Po  compiler.Po  constant_node.Po  distribution.Po  env.Po  function_node.Po  gamma_sampler.Po  main.Po  model.Po  node.Po  norm_sampler.Po  range_node.Po  real_sampler.Po  sampler.Po  stochastic_node.Po  symbol_node.Po
src/clearsilver/: ClearSilver.h  Makefile  Makefile.am  Makefile.depends  Makefile.in  clearsilver.vcproj  config.status  configure  configure.in  cs.c  cs.h  cs_config.h  cs_config.h.in  csdump.c  csparse.c  dict.h  filter.c  filter.h  missing.c  neo_date.c  neo_err.c  neo_err.h  neo_files.c  neo_files.h  neo_hdf.c  neo_misc.c  neo_misc.h  neo_net.c  neo_server.c  neo_server.h  neo_str.c  neo_str.h  rcfs.c  skiplist.h  stamp-h1  ulocks.c  wdb.h
src/clearsilver/.deps/: cs.Po  csdump.Po  csparse.Po  dict.Po  filter.Po  missing.Po  neo_date.Po  neo_err.Po  neo_files.Po  neo_hash.Po  neo_hdf.Po  neo_misc.Po  neo_net.Po  neo_rand.Po  neo_server.Po  neo_str.Po  rcfs.Po  skiplist.Po  snprintf.Po  ulist.Po  ulocks.Po  wdb.Tpo  wildmat.Po
src/clearsilver/autom4te.cache/: output.0  output.1  output.2  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
src/clearsilver/win32/: dirent.c  getopt.h
src/mainapp/: Makefile.am  Makefile.in  array_node.c  chain.c  chain.h  compiler.c  compiler.h  conf.h  config.h.in  constant_node.c  distribution.c  distribution.h  env.c  env.h  function_node.c  gamma_sampler.c  main.c  mainapp.vcproj  model.c  model.h  node.c  node.h  norm_sampler.c  range_node.c  real_sampler.c  sampler.c  sampler.h  stochastic_node.c  symbol_node.c
src/mainapp/distributions/: Makefile.am  Makefile.in  dbern.c  dbern.h  dbeta.c  dbeta.h  dbin.c  dbin.h  dcat.c  dcat.h  dchisq.c  dexp.c  dexp.h  dgamma.c  dgamma.h  dlnorm.c  dnegbin.c  dnorm.c  dnorm.h  dpois.c  dpois.h  dunif.c  dunif.h  dweib.c  dweib.h
src/mainapp/win32/: dirent.c  dirent.h
src/nmath/: Makefile.am  Makefile.in  RNG.c  bd0.c  chebyshev.c  config.h  config.h.in  config.status  configure  configure.in  dbeta.c  dbinom.c  dchisq.c  dexp.c  dgamma.c  dlnorm.c  dlogis.c  dnbinom.c  dnorm.c  dpois.c  dpq.h  dunif.c  dweibull.c  expm1.c  fmax2.c  fmin2.c  fsign.c  gamma.c  lbeta.c  lgamma.c  lgammacor.c  log1p.c  nmath.c  nmath.h  nmath.vcproj  qnorm.c  rbeta.c  rbinom.c  rchisq.c  rexp.c  (+10 more)
src/nmath/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/parser_bugs/: Makefile.am  Makefile.in  bugs_node.c  bugs_node.h  config.h  config.h.in  config.status  configure  configure.in  configure.scan  lexer_bugs.c  lexer_bugs.l  parser_bugs.c  parser_bugs.h  parser_bugs.vcproj  parser_bugs.y
src/parser_bugs/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
src/parser_rdata/: Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  lexer_rdata.c  lexer_rdata.l  parser_rdata.c  parser_rdata.h  parser_rdata.vcproj  parser_rdata.y  rdata_node.c  rdata_node.h
src/parser_rdata/autom4te.cache/: output.0  output.1  output.2  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
src/templates/: Makefile  Makefile.in
src/templates/ansic/: conf.h.cs  environment.c.cs  environment.h.cs  main.c.cs  nmath.h.cs  sampler.c.cs  sampler.h.cs  sampler_gamma.c.cs  sampler_gamma.h.cs  sampler_norm.c.cs  sampler_norm.h.cs  sampler_real.c.cs
vcsolution/: magro.sln
