noinst_LIBRARIES = libnmath.a
lib_LIBRARIES = libnmath.a
libnmath_a_SOURCES = nmath.h nmath.c RNG.c chebyshev.c expm1.c log1p.c qnorm.c sexp.c dbinom.c rbinom.c bd0.c lgamma.c stirlerr.c lgammacor.c gamma.c \
dnorm.c rnorm.c \
dgamma.c rgamma.c \
dpois.c rpois.c \
dbeta.c rbeta.c \
dnbinom.c rnbinom.c \
dchisq.c rchisq.c \
dexp.c rexp.c \
dunif.c runif.c \
dweibull.c rweibull.c \
dlnorm.c rlnorm.c rlogis.c dlogis.c \
dbeta.c rbeta.c lbeta.c \
fmax2.c fmin2.c \
imax2.c imin2.c fsign.c

